--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "bel": "^5.0.2",
     "brfs": "^1.4.3",
     "choo": "^6.0.0-4",
-    "marked": "^0.3.6",
+    "markdown-it": "^8.4.0",
+    "markdown-it-implicit-figures": "^0.6.0",
+    "markdown-it-video": "^0.4.0",
     "nano-markdown": "^1.2.0",
     "nanocomponent": "^6.0.0-1",
     "object-keys": "^1.0.11",
     "object-values": "^1.0.0",
+    "raf": "^3.3.2",
     "require-globify": "^1.4.1",
     "tags-input": "^1.1.1",
     "xhr": "^2.4.0",
