--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bel": "^5.0.2",
     "brfs": "^1.4.3",
     "choo": "^6.0.0-4",
+    "enoki": "^1.0.5",
     "markdown-it": "^8.4.0",
     "markdown-it-html5-embed": "^0.4.0",
     "markdown-it-implicit-figures": "^0.6.0",
