--- a/source/package.json
+++ b/source/package.json
@@ -19,6 +19,7 @@
     "nanoreset": "^1.2.0",
     "object-keys": "^1.0.11",
     "object-values": "^1.0.0",
+    "paper": "^0.11.5",
     "query-string": "^5.0.0",
     "xhr": "^2.4.0",
     "xtend": "^4.0.1",
