--- a/source/package.json
+++ b/source/package.json
@@ -23,6 +23,7 @@
     "object-values": "^1.0.0",
     "paper": "^0.11.5",
     "query-string": "^5.0.0",
+    "uuid-v4": "^0.1.0",
     "warpjs": "^1.0.8",
     "xhr": "^2.4.1",
     "xtend": "^4.0.1",
